Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31628

Code completion doesn't work if QML Language Server is enabled

    XMLWordPrintable

Details

    • 6a8f3d82d (14.0), af3030f4d (15.0)

    Description

      Steps to reproduce:
      1. Disable 'QML Language Server' from Preferences -> Qt Quick -> Turn on
      2. Create a new Qt Quick Application
      3. Input texted inside Window {}
      4. Hit Ctrl+Space -> code is completed to TextEdit
      5. Enable 'QML Language Server'
      6. Repeat steps 3-4

      Result:
      Code is not completed if 'QML Language Server' is enabled.

      Attachments

        1. qmlls.log
          41 kB
        2. screenshot-1.png
          screenshot-1.png
          686 kB
        3. screenshot-2.png
          screenshot-2.png
          17 kB
        4. screenshot-3.png
          screenshot-3.png
          76 kB
        For Gerrit Dashboard: QTCREATORBUG-31628
        # Subject Branch Project Status CR V

        Activity

          People

            davschul David Schulz
            jukkanokso Jukka Nokso
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes