LanguageClient: automatically apply generic completion items

If the item does not contain any complex text edits we assume that the
completion can be applied implicitly. So it gets automatically applied
if it is the only item in the list of completions.

Fixes: QTCREATORBUG-31628
Change-Id: I8a3e683fe72a4c2ff8487c48837114ba1b93803e
Reviewed-by: Christian Stenger <christian.stenger@qt.io>